# Toccata

./: analysis_midi.py  pyproject.toml  separate.py  toccata.py  transcription.py
midis/: Call of Silence [钢琴].mid  顾彬 - 梁祝（钢琴 b曲）.mid
native/fluidsynth/lib/: libfluidsynth-3.lib
native/fluidsynth/lib/cmake/fluidsynth/: FluidSynth-shared-targets.cmake  FluidSynthConfig.cmake  FluidSynthConfigVersion.cmake
native/fluidsynth/lib/pkgconfig/: fluidsynth.pc
scores/: Call of Silence [钢琴].json  score-顾彬 - 梁祝（钢琴 b曲）.json
scores_raw/: Call of Silence [钢琴].json
