[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "toccata"
version = "0.1.0"
requires-python = ">=3.10"

dependencies = [
    "keyboard>=0.13.5",
    "pyfluidsynth>=1.3.3",
    "pretty_midi>=0.2.10",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["toccata*"]
